Update Wikipedia links to use https

--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -10,7 +10,7 @@ status:
 
 Objective-C is a language caught between two worlds.
 
-On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings it power and a dash of chaos.
+On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](https://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings it power and a dash of chaos.
 
 It's an identity crisis borne out through an ever-increasing prevalence of the `@` symbol.
 
@@ -94,11 +94,11 @@ Take a look at the second row, with `NSCountedSet` and `CFBag`. Notice that unli
 
 ## Bags, in the Abstract
 
-In the <a href="http://en.wikipedia.org/wiki/Collection_(abstract_data_type)">pantheon of collection data types</a> in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues.
+In the <a href="https://en.wikipedia.org/wiki/Collection_(abstract_data_type)">pantheon of collection data types</a> in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues.
 
 In fact, it's pretty obscure. You've probably never heard of it.
 
-A bag, or [multiset](http://en.wikipedia.org/wiki/Multiset) is a variant of a set, where members can appear more than once. A count is associated with each unique member of the collection, representing the number of times it has been added. Like with sets, order does not matter.
+A bag, or [multiset](https://en.wikipedia.org/wiki/Multiset) is a variant of a set, where members can appear more than once. A count is associated with each unique member of the collection, representing the number of times it has been added. Like with sets, order does not matter.
 
 Its practical applications are... limited, but you'll know one when it comes up. Tallying votes in a general election? Simulating homework problems an intro probability class? Implementing a game of Yahtzee? Bag is your new bicycle!
 
