--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -7,7 +7,7 @@ status:
     swift: 1.1
 ---
 
-The [Lisa](http://en.wikipedia.org/wiki/Apple_Lisa). The [Twentieth Anniversary Macintosh](http://en.wikipedia.org/wiki/Twentieth_Anniversary_Macintosh). The [iPod Hi-Fi](http://en.wikipedia.org/wiki/IPod_Hi-Fi). The [MacBook Wheel](http://www.youtube.com/watch?v=9BnLbv6QYcA).
+The [Lisa](https://en.wikipedia.org/wiki/Apple_Lisa). The [Twentieth Anniversary Macintosh](https://en.wikipedia.org/wiki/Twentieth_Anniversary_Macintosh). The [iPod Hi-Fi](https://en.wikipedia.org/wiki/IPod_Hi-Fi). The [MacBook Wheel](http://www.youtube.com/watch?v=9BnLbv6QYcA).
 
 Each of these products exemplifies Apple's obsessive pursuit of quality as much as its unrivaled ability to anticipate the direction of things to come and execute flawlessly.
 
