--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -74,7 +74,7 @@ This evaluates to:
 
 Now, [this might be acceptable for JavaScript](https://www.destroyallsoftware.com/talks/wat), but Objective-C don't suffer fools gladly.
 
-Deriving truth value directly from an arithmetic operation is never a good idea. Like the sentence ["Colorless green ideas sleep furiously"](http://en.wikipedia.org/wiki/Colorless_green_ideas_sleep_furiously), it may be grammatical (after all, `BOOL` is a `signed char` like any other, so it _could_ be treated as a number), but it doesn't make sense semantically. Instead, use the result of the `==` operator, or cast values into booleans with the `!` (or `!!`) operator.
+Deriving truth value directly from an arithmetic operation is never a good idea. Like the sentence ["Colorless green ideas sleep furiously"](https://en.wikipedia.org/wiki/Colorless_green_ideas_sleep_furiously), it may be grammatical (after all, `BOOL` is a `signed char` like any other, so it _could_ be treated as a number), but it doesn't make sense semantically. Instead, use the result of the `==` operator, or cast values into booleans with the `!` (or `!!`) operator.
 
 ## The Truth About `NSNumber` and `BOOL`
 
