--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -17,9 +17,9 @@ GPUImage is a BSD-licensed iOS library written by [Brad Larson](https://github.c
 
 ## GPU vs. CPU
 
-Every iPhone ships with two processors: a [CPU](http://en.wikipedia.org/wiki/Central_processing_unit), or Central Processing Unit and a [GPU](http://en.wikipedia.org/wiki/Graphics_processing_unit), or Graphics Processing Unit. Each processor has its own strengths, and modern chip architecture (like in the iPhone's [A4](http://en.wikipedia.org/wiki/Apple_A4)) integrate the CPU and GPU onto the same physical die.
+Every iPhone ships with two processors: a [CPU](https://en.wikipedia.org/wiki/Central_processing_unit), or Central Processing Unit and a [GPU](https://en.wikipedia.org/wiki/Graphics_processing_unit), or Graphics Processing Unit. Each processor has its own strengths, and modern chip architecture (like in the iPhone's [A4](https://en.wikipedia.org/wiki/Apple_A4)) integrate the CPU and GPU onto the same physical die.
 
-When you write C or Objective-C code in Xcode, you're generating instructions that will be handled almost exclusively by the CPU. The GPU, by contrast, is a specialized chip that is especially well-suited for computation that can be split out into many small, independent operations, such as graphics rendering. The kinds of instructions understood by the GPU are quite different from that of the CPU, and as such, we write this code in a different language: [OpenGL](http://en.wikipedia.org/wiki/Opengl) (or specifically, [OpenGL ES](http://en.wikipedia.org/wiki/OpenGL_ES) on the iPhone & iPad).
+When you write C or Objective-C code in Xcode, you're generating instructions that will be handled almost exclusively by the CPU. The GPU, by contrast, is a specialized chip that is especially well-suited for computation that can be split out into many small, independent operations, such as graphics rendering. The kinds of instructions understood by the GPU are quite different from that of the CPU, and as such, we write this code in a different language: [OpenGL](https://en.wikipedia.org/wiki/Opengl) (or specifically, [OpenGL ES](https://en.wikipedia.org/wiki/OpenGL_ES) on the iPhone & iPad).
 
 > Check out [Jeff LaMarche's GLProgram OpenGL ES 2.0 book](http://iphonedevelopment.blogspot.com/2010/11/opengl-es-20-for-ios-chapter-4.html) for a great introduction to OpenGL ES and the rendering pipeline.
 
@@ -231,7 +231,7 @@ Seriously, the [Filter Showcase Example App](https://github.com/BradLarson/GPUIm
 
 GPUImage is, at its core, an Objective-C abstraction around a rendering pipeline. Source images from the camera, network, or disk are loaded and manipulated according to a chain of filters, and finally outputted either a view, graphics context, or data stream.
 
-For example, images from the video camera could have a Color Levels filter applied to simulate different types of [color blindness](http://en.wikipedia.org/wiki/Color_blindness) and displayed in a live view.
+For example, images from the video camera could have a Color Levels filter applied to simulate different types of [color blindness](https://en.wikipedia.org/wiki/Color_blindness) and displayed in a live view.
 
 ```objc
 GPUImageVideoCamera *videoCamera = [[GPUImageVideoCamera alloc]
