--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -13,7 +13,7 @@ In a mechanical universe of material interactions expressed through mathematical
 
 We can be sure of one thing, however: in the closed, digital universe of CPU cycles, processes, and threads, there is no true randomness, only _pseudorandomness_.
 
-Pseudorandomness, is often implemented in a way very similar to a [cryptographic hash](http://en.wikipedia.org/wiki/Cryptographic_hash_function), as a deterministic function that returns a value based on the current time (salted, of course, by some initial seed value). Also like hash functions, there are a number of <abbr title="pseudorandom number generators">PRNG</abbr>, or pseudorandom number generators, each of which are optimized for particular performance characteristics: uniformity, periodicity, and computational complexity.
+Pseudorandomness, is often implemented in a way very similar to a [cryptographic hash](https://en.wikipedia.org/wiki/Cryptographic_hash_function), as a deterministic function that returns a value based on the current time (salted, of course, by some initial seed value). Also like hash functions, there are a number of <abbr title="pseudorandom number generators">PRNG</abbr>, or pseudorandom number generators, each of which are optimized for particular performance characteristics: uniformity, periodicity, and computational complexity.
 
 Of course, for app developers, all of this is an academic exercise. And rather than bore you with any more high-minded, long-winded treatises on the philosophical nature of randomness, we're going to tackle this one FAQ-style.
 
@@ -65,7 +65,7 @@ if ([array count] > 0) {
 ```objc
 NSMutableArray *mutableArray = [NSMutableArray arrayWithArray:array];
 NSUInteger count = [mutableArray count];
-// See http://en.wikipedia.org/wiki/Fisher–Yates_shuffle
+// See https://en.wikipedia.org/wiki/Fisher–Yates_shuffle
 if (count > 1) {
   for (NSUInteger i = count - 1; i > 0; --i) {
       [mutableArray exchangeObjectAtIndex:i withObjectAtIndex:arc4random_uniform((int32_t)(i + 1))];
@@ -79,7 +79,7 @@ NSArray *randomArray = [NSArray arrayWithArray:mutableArray];
 
 ## How Do I Generate a Random String?
 
-If you're looking to generate "[lorem ipsum](http://en.wikipedia.org/wiki/Lorem_ipsum)"-style sentences, try constructing a [Markov Chain](http://en.wikipedia.org/wiki/Markov_chain) from a [corpus](http://en.wikipedia.org/wiki/Text_corpus).
+If you're looking to generate "[lorem ipsum](https://en.wikipedia.org/wiki/Lorem_ipsum)"-style sentences, try constructing a [Markov Chain](https://en.wikipedia.org/wiki/Markov_chain) from a [corpus](https://en.wikipedia.org/wiki/Text_corpus).
 
 Otherwise, if you're looking to just get random letters, try one of the following methods:
 
@@ -102,7 +102,7 @@ NSString *letter = [vowels substringWithRange:NSMakeRange(arc4random_uniform([vo
 
 ## Why Should I Use `arc4random(3)` instead of `rand(3)` or `random(3)`?
 
-> C functions are typically denoted with a number `3` inside of parentheses, following the organizational convention of [`man` pages](http://en.wikipedia.org/wiki/Man_page#Manual_sections).
+> C functions are typically denoted with a number `3` inside of parentheses, following the organizational convention of [`man` pages](https://en.wikipedia.org/wiki/Man_page#Manual_sections).
 
 - `arc4random` does not require an initial seed (with `srand` or `srandom`), making it that much easier to use.
 - `arc4random` has a range up to `0x100000000 (4294967296)`, whereas `rand` and `random` top out at `RAND_MAX = 0x7fffffff (2147483647)`.
