--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -16,7 +16,7 @@ We'll be going over many of the new features iOS 7 in depth over the coming week
 
 ## NSData (NSDataBase64Encoding)
 
-[Base64](http://en.wikipedia.org/wiki/Base64) is a general term for encoding binary data as ASCII text. This is used all over the place on the web, since many core technologies are designed to support text, but not raw binary. For instance, CSS can embed images with [inline `data://` URIs](http://en.wikipedia.org/wiki/Data_URI_scheme), which are often Base64-encoded. Another example is [Basic `Authentication` headers](http://en.wikipedia.org/wiki/Basic_access_authentication), which Base64-encodes its username/password pair, which is marginally better than having them completely in the clear.
+[Base64](https://en.wikipedia.org/wiki/Base64) is a general term for encoding binary data as ASCII text. This is used all over the place on the web, since many core technologies are designed to support text, but not raw binary. For instance, CSS can embed images with [inline `data://` URIs](https://en.wikipedia.org/wiki/Data_URI_scheme), which are often Base64-encoded. Another example is [Basic `Authentication` headers](https://en.wikipedia.org/wiki/Basic_access_authentication), which Base64-encodes its username/password pair, which is marginally better than having them completely in the clear.
 
 For the longest time, this boringly essential function was completely MIA, leaving thousands of developers to copy-paste random code snippets from forum threads. It was an omission as conspicuous and annoying as JSON pre-iOS 5.
 
@@ -309,7 +309,7 @@ NSURL *URL = [NSURL URLWithString:@"https://nshipster.com/ios7"];
 
 Text-to-Speech has been the killer feature of computers for [accessibility](https://nshipster.com/uiaccessibility/) and [pranking](https://nshipster.com/icloud/) enthusiasts since its inception in the late 1960s.
 
-iOS 7 brings the power of Siri with the convenience of a [Speak & Spell](http://en.wikipedia.org/wiki/Speak_%26_Spell_%28toy%29) in a new class `AVSpeechSynthesizer`:
+iOS 7 brings the power of Siri with the convenience of a [Speak & Spell](https://en.wikipedia.org/wiki/Speak_%26_Spell_%28toy%29) in a new class `AVSpeechSynthesizer`:
 
 ```swift
 import AVFoundation
