--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -82,7 +82,7 @@ At the time of writing, there is still a ways to go before this becomes widely a
 
 * * *
 
-Just as with the growth population within cities, infrastructure makes all of difference. One way or another, whether by local [government mandate](http://en.wikipedia.org/wiki/Commissioners'_Plan_of_1811), [emergent self-organization](http://en.wikipedia.org/wiki/Kowloon_Walled_City), or somewhere in-between, environments are changed to accommodate this growth.
+Just as with the growth population within cities, infrastructure makes all of difference. One way or another, whether by local [government mandate](https://en.wikipedia.org/wiki/Commissioners'_Plan_of_1811), [emergent self-organization](https://en.wikipedia.org/wiki/Kowloon_Walled_City), or somewhere in-between, environments are changed to accommodate this growth.
 
 Objective-C has and continues to undergo rapid growth based on the popularity of iOS. It is up to the community, in working with (and sometimes against) Apple to create infrastructure necessary to integrate so many new developers. How successful we are in this respect determines how we understand and communicate our roles and responsibilities as professional developers.
 
