--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -11,9 +11,9 @@ status:
     reviewed: September 9, 2015
 ---
 
-There is a simple beauty to—let's call them "one-dimensional data types": numbers or strings formatted to contain multiple values, retrievable through a mathematical operator or parsing routine. Like how the hexadecimal color <tt style="color: #EE8262;">#EE8262</tt> can have [red, green, and blue components](http://en.wikipedia.org/wiki/Web_colors) extracted by masking and shifting its bits, or how [regular expressions](http://en.wikipedia.org/wiki/Regular_expression) can match and capture complex patterns in just a few characters.
+There is a simple beauty to—let's call them "one-dimensional data types": numbers or strings formatted to contain multiple values, retrievable through a mathematical operator or parsing routine. Like how the hexadecimal color <tt style="color: #EE8262;">#EE8262</tt> can have [red, green, and blue components](https://en.wikipedia.org/wiki/Web_colors) extracted by masking and shifting its bits, or how [regular expressions](https://en.wikipedia.org/wiki/Regular_expression) can match and capture complex patterns in just a few characters.
 
-Of all the one-dimensional data types out there, [URIs](http://en.wikipedia.org/wiki/URI_scheme) reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer.
+Of all the one-dimensional data types out there, [URIs](https://en.wikipedia.org/wiki/URI_scheme) reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer.
 
 In its most basic form, a URI is comprised of a scheme name and a hierarchical part, with an optional query and fragment:
 
@@ -141,7 +141,7 @@ The difference here, between `NSURL` and `NSURLComponents`, is that component pr
 
 > Attempting to set an invalid scheme string or negative port number will throw an exception.
 
-In addition, `NSURLComponents` also has read-write properties for [percent-encoded](http://en.wikipedia.org/wiki/Percent-encoding) versions of each component.
+In addition, `NSURLComponents` also has read-write properties for [percent-encoded](https://en.wikipedia.org/wiki/Percent-encoding) versions of each component.
 
 - `percentEncodedUser`
 - `percentEncodedPassword`
@@ -200,7 +200,7 @@ extension NSCharacterSet {
 
 ## Bookmark URLs
 
-One final topic worth mentioning are bookmark URLs, which can be used to safely reference files between application launches. Think of them as a persistent [file descriptor](http://en.wikipedia.org/wiki/File_descriptor).
+One final topic worth mentioning are bookmark URLs, which can be used to safely reference files between application launches. Think of them as a persistent [file descriptor](https://en.wikipedia.org/wiki/File_descriptor).
 
 > A bookmark is an opaque data structure, enclosed in an `NSData` object, that describes the location of a file. Whereas path- and file reference URLs are potentially fragile between launches of your app, a bookmark can usually be used to re-create a URL to a file even in cases where the file was moved or renamed.
 
@@ -211,8 +211,8 @@ You can read more about bookmark URLs in ["Locating Files Using Bookmarks" from 
 
 Forget jet packs and flying cars—my idea of an exciting future is one where everything has a URL, is encoded in Markdown, and stored in Git. If your mind isn't blown by the implications of a _universal_ resource locator, then I would invite you to reconsider.
 
-Like [hypertext](http://en.wikipedia.org/wiki/Hypertext), universal identification is a philosophical concept that both pre-dates and transcends computers. Together, they form the fabric of our information age: a framework for encoding our collective understanding of the universe as a network of individual facts, in a fashion that is hauntingly similar to how the neurons in our brains do much the same.
+Like [hypertext](https://en.wikipedia.org/wiki/Hypertext), universal identification is a philosophical concept that both pre-dates and transcends computers. Together, they form the fabric of our information age: a framework for encoding our collective understanding of the universe as a network of individual facts, in a fashion that is hauntingly similar to how the neurons in our brains do much the same.
 
-We are just now crossing the precipice of a [Cambrian Explosion](http://en.wikipedia.org/wiki/Cambrian_explosion) in physical computing. In an internet of things, where [every object of our lives has a URL](http://en.wikipedia.org/wiki/IPv6#Larger_address_space) and embeds an electronic soul, a digital consciousness will emerge. Not to say, necessarily, that [the singularity is near](http://en.wikipedia.org/wiki/The_Singularity_Is_Near), but we're on the verge of something incredible.
+We are just now crossing the precipice of a [Cambrian Explosion](https://en.wikipedia.org/wiki/Cambrian_explosion) in physical computing. In an internet of things, where [every object of our lives has a URL](https://en.wikipedia.org/wiki/IPv6#Larger_address_space) and embeds an electronic soul, a digital consciousness will emerge. Not to say, necessarily, that [the singularity is near](https://en.wikipedia.org/wiki/The_Singularity_Is_Near), but we're on the verge of something incredible.
 
 Quite lofty implications for a technology used most often to exchange pictures of cats.
