--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -259,7 +259,7 @@ credentialStorage.getCredentialsForProtectionSpace(protectionSpace, task: task) 
 
 ## kUTTypeToDoItem
 
-Looking through the latest API diffs, one might notice the large number of new [UTIs](http://en.wikipedia.org/wiki/Uniform_Type_Identifier) constants. One that caught my eye was `kUTTypeToDoItem`:
+Looking through the latest API diffs, one might notice the large number of new [UTIs](https://en.wikipedia.org/wiki/Uniform_Type_Identifier) constants. One that caught my eye was `kUTTypeToDoItem`:
 
 ```swift
 import MobileCoreServices
