--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -105,7 +105,7 @@ Let it be perfectly clear that the correct way to compare `NSString` objects is 
 
 So what's going on here? Why does this work, when the same code for `NSArray` or `NSDictionary` literals wouldn't work?
 
-It all has to do with an optimization technique known as [string interning](http://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for statically defined immutable strings._
+It all has to do with an optimization technique known as [string interning](https://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for statically defined immutable strings._
 
 Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool.
 
@@ -123,17 +123,17 @@ Now for a quick flashback to Computer Science 101:
 
 ---
 
-A [hash table](http://en.wikipedia.org/wiki/Hash_table) is a fundamental data structure in programming, and it's what enables `NSSet` & `NSDictionary` to have fast (`O(1)`) lookup of elements.
+A [hash table](https://en.wikipedia.org/wiki/Hash_table) is a fundamental data structure in programming, and it's what enables `NSSet` & `NSDictionary` to have fast (`O(1)`) lookup of elements.
 
 We can best understand hash tables by contrasting them to arrays:
 
 **Arrays** store elements in sequential indexes, such that an Array of size `n` will have slots at positions `0`, `1`, up to `n - 1`. To determine where an element is stored in the array (if at all), each position would have to be checked one-by-one (unless the array happens to be sorted, but that's another story).
 
-**Hash Tables** take a slightly different approach. Rather than storing elements sequentially (`0`, `1`, `...`, `n-1`), a hash table allocates `n` positions in memory, and uses a function to calculate a position within that range. A hash function is [deterministic](http://en.wikipedia.org/wiki/Deterministic_algorithm), and a _good_ hash function generates values in a relatively [uniform distribution](http://en.wikipedia.org/wiki/Uniform_distribution_%28discrete%29) without being too computationally expensive. A _hash collision_ occurs when two different objects calculate the same hash value. When this happens, the hash table will seek from the point of collision and place the new object in the first available place. As a hash table becomes more congested, the likelihood of collision increases, which leads to more time spent looking for a free space (hence why a hash function with a uniform distribution is so desireable).
+**Hash Tables** take a slightly different approach. Rather than storing elements sequentially (`0`, `1`, `...`, `n-1`), a hash table allocates `n` positions in memory, and uses a function to calculate a position within that range. A hash function is [deterministic](https://en.wikipedia.org/wiki/Deterministic_algorithm), and a _good_ hash function generates values in a relatively [uniform distribution](https://en.wikipedia.org/wiki/Uniform_distribution_%28discrete%29) without being too computationally expensive. A _hash collision_ occurs when two different objects calculate the same hash value. When this happens, the hash table will seek from the point of collision and place the new object in the first available place. As a hash table becomes more congested, the likelihood of collision increases, which leads to more time spent looking for a free space (hence why a hash function with a uniform distribution is so desireable).
 
 ---
 
-One of the most common misconceptions about implementing a custom `hash` function comes from [affirming the consequent](http://en.wikipedia.org/wiki/Affirming_the_consequent), thinking that `hash` values _must_ be distinct. This often leads to [needlessly complicated implementations involving the magical incantation of prime numbers copied from Java textbooks](http://stackoverflow.com/a/254380/157142). In reality, a simple [`XOR`](http://en.wikipedia.org/wiki/Exclusive_or) over the hash values of critical properties is sufficient 99% of the time.
+One of the most common misconceptions about implementing a custom `hash` function comes from [affirming the consequent](https://en.wikipedia.org/wiki/Affirming_the_consequent), thinking that `hash` values _must_ be distinct. This often leads to [needlessly complicated implementations involving the magical incantation of prime numbers copied from Java textbooks](http://stackoverflow.com/a/254380/157142). In reality, a simple [`XOR`](https://en.wikipedia.org/wiki/Exclusive_or) over the hash values of critical properties is sufficient 99% of the time.
 
 The trick is in thinking about what the critical value of an object is.
 
