--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -7,7 +7,7 @@ status:
     swift: 1.1
 ---
 
-The [Lisa](https://en.wikipedia.org/wiki/Apple_Lisa). The [Twentieth Anniversary Macintosh](https://en.wikipedia.org/wiki/Twentieth_Anniversary_Macintosh). The [iPod Hi-Fi](https://en.wikipedia.org/wiki/IPod_Hi-Fi). The [MacBook Wheel](http://www.youtube.com/watch?v=9BnLbv6QYcA).
+The [Lisa](https://en.wikipedia.org/wiki/Apple_Lisa). The [Twentieth Anniversary Macintosh](https://en.wikipedia.org/wiki/Twentieth_Anniversary_Macintosh). The [iPod Hi-Fi](https://en.wikipedia.org/wiki/IPod_Hi-Fi). The [MacBook Wheel](https://www.youtube.com/watch?v=9BnLbv6QYcA).
 
 Each of these products exemplifies Apple's obsessive pursuit of quality as much as its unrivaled ability to anticipate the direction of things to come and execute flawlessly.
 
@@ -17,7 +17,7 @@ But perhaps what Apple is most renowned for, however, is its consistent track re
 
 So when Apple introduced iCloud at WWDC in 2011, everyone in the audience was rapt in anticipation, overcome with a sense of optimistic wonder. "Not again!", we said to ourselves, shaking our head with a knowing smile. "This changes everything!"
 
-And indeed, iCloud _has_ changed everything. Although it seemed almost too good to be true when Steve Jobs got up on that stage in Moscone to announce iCloud to the world that morning in June—if anything, Apple has __under__-promised and __over__-delivered with iCloud.
+And indeed, iCloud _has_ changed everything. Although it seemed almost too good to be true when Steve Jobs got up on that stage in Moscone to announce iCloud to the world that morning in June—if anything, Apple has **under**-promised and **over**-delivered with iCloud.
 
 Now, NSHipster usually covers obscure topics that you've probably never heard of. But this is one of those days where it just feels _right_ to take this opportunity today to make sure we're all on the same page about iCloud.
 
