Add missing excerpt

--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -3,7 +3,10 @@ title: Hashable / Hasher
 author: Mattt
 category: Swift
 excerpt: >
-  Hashable
+  Our topic this week is `Hashable`
+  and its new related type, `Hasher`.
+  Together, they comprise the functionality underlying two of Swift's
+  most beloved collection classes: `Dictionary` and `Set`
 status:
   swift: 4.2
 ---
