--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -98,7 +98,7 @@ had to provide an implementation for the `==` operator.
 To conform to `Hashable`,
 had to provide an implementation of the computed `hashValue` property:
 
-```
+```swift
 // Swift < 4.1
 extension Color: Equatable {
     static func ==(lhs: Color, rhs: Color) -> Bool {
