Typos: Add 2 missing periods

--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -35,7 +35,7 @@ Much better than a queue, I think you'll agree!
 Our topic this week is `Hashable`
 and its new related type, `Hasher`.
 Together, they comprise the functionality underlying two of Swift's
-most beloved collection classes: `Dictionary` and `Set`
+most beloved collection classes: `Dictionary` and `Set`.
 
 ---
 
@@ -43,7 +43,7 @@ Let's say you have a
 [**list**](<https://en.wikipedia.org/wiki/List_(abstract_data_type)>)
 of objects that can be compared for equality with one another.
 To find a particular object in that list,
-you iterate all the elements until you find a match
+you iterate all the elements until you find a match. 
 As you add more elements to the array,
 the average amount of time necessary to find any one of them increases linearly
 (`O(n)`).
