Fix Hashable code example comment

--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -134,7 +134,7 @@ colors as different as cyan and yellow produce a hash collision:
 let cyan = Color(red: 0x00, green: 0xFF, blue: 0xFF)
 let yellow = Color(red: 0xFF, green: 0xFF, blue: 0x00)
 
-cyan.hashValue == yellow.hashValue // false, no collision
+cyan.hashValue == yellow.hashValue // true, collision
 ```
 
 Most of the time,
